# actix-yew-app-template

./: README.md
.github/workflows/: ci.yml  template_values.toml
template/: Cargo.toml  Dockerfile  README.md  cargo-generate.toml
template/.github/workflows/: ci.yml
template/api/: Cargo.toml
template/api/config/: default.toml
template/api/src/: configuration.rs  lib.rs  main.rs  observability.rs
template/api/src/routes/: default.rs  mod.rs
template/api/src/{{project-name}}/: api.rs
template/api/tests/api/: default.rs  helpers.rs  main.rs
template/src/: lib.rs
template/web/: Cargo.toml  index.html
template/web/src/: lib.rs  main.rs
template/web/src/components/: object.rs
