[package]
name = "{{project-name}}-web"
version = "0.1.0"
edition = "2021"
authors = ["{{authors}}"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "{{project-name}}-web"

[dependencies]
{{project-name}} = { path = ".." }
yew = "0.19"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
uikit-rs = { git = "https://github.com/dax/uikit-rs.git" }
wasm-bindgen = "0.2.79"
